minor spacing fix

--- a/scss/_brand.scss
+++ b/scss/_brand.scss
@@ -664,7 +664,6 @@ li.snap-activity {
 .pushy-submenu.snap_pm_menu_mycategory_li {
     margin: 0px;
     margin-left: 15px;
-    margin-bottom: 5px;
     cursor:pointer;
 }
 
